--- a/gruppi.tex
+++ b/gruppi.tex
@@ -801,7 +801,7 @@ Quindi uno tra un 2-sylow e un 3-sylow dev'essere normale, inoltre sono ciclici 
 	 		\item [$ Q_8 $.] Non è possibile, sarebbe un isomorfismo!
 	 	\end{itemize}
 	 	Tutti questi omomorfismi preservano necessariamente i centralizzatori, perché l'unico sottogruppo dei quaternioni di ordine $ 2 $ è il centro. Dunque sembrano accettabili tutti gli omomorfismi
-	 	\[ \beta: D_4 \to Z(Q_8) \]
+	 	\[ \boxed{\beta: D_4 \to Z(Q_8)} \]
 	 	
 	 	\item [$ \gamma $.] Consideriamo le possibili immagini, per dimensione:
 	 	\begin{itemize}
@@ -827,11 +827,11 @@ Quindi uno tra un 2-sylow e un 3-sylow dev'essere normale, inoltre sono ciclici 
 		 	\item [$ \mathbb{Z}_4 \times D_4$.][$ \checkmark $] Che sicuramente è il gruppo che cerchiamo.
 		 \end{itemize}
 	 quindi necessariamente il centralizzatore di $ Z(\gamma(i)) \cong D_4 $ e pertanto $ \gamma(i) $ è un elemento del centro di $ D_4 $, che ha solo due elementi. Quindi gli omomorfismi $ \gamma $ accettabili sono solo quello banale e i tre che hanno immagine in $ \mathbb{Z}_2 $. Dunque sembrano accettabili tutti gli omomorfismi
-	 \[ \beta: Q_8 \to Z(D_4) \]
+	 \[ \boxed{\gamma: Q_8 \to Z(D_4)} \]
 	 
-	 \item [$ \alpha $.] Dev'essere un isomorfismo. Se non fosse un'isomorfismo l'immagine non potrebbe avere dimensione $ 4 $, perché come già visto i sottogruppi di indice adatto eliminano gli elementi di ordine $ 4 $, e non potrebbe avere dimensione più piccola, perché altrimenti il primo termine dell'immagine di $ \varphi $ apparterrebbe sempre al centro di $ G $.
+	 \item [$ \alpha $.] Dev'essere un \underline{isomorfismo}. Se non fosse un'isomorfismo l'immagine non potrebbe avere dimensione $ 4 $, perché come già visto i sottogruppi di indice adatto eliminano gli elementi di ordine $ 4 $, e non potrebbe avere dimensione più piccola, perché altrimenti il primo termine dell'immagine di $ \varphi $ apparterrebbe sempre al centro di $ G $.
 	 
-	 \item [$ \delta $.] Analogamente dev'essere un isomorfismo. 
+	 \item [$ \delta $.] Analogamente dev'essere un \underline{isomorfismo}. 
 	\end{itemize}
 Mostriamo ora che le condizioni trovate sono sufficienti. Ci basta mostrare che $ \varphi $, costruito con le componenti sopra trovate, è iniettivo. Supponiamo di aver trovato $ (x, y) \in G $ tale che
 \[ \varphi(x, y) = (\alpha(x)\beta(y), \gamma(x)\delta(y)) = (e, e) \]
@@ -857,7 +857,7 @@ k \mapsto i
 
 
 questi generano un sottogruppo "disgiunto" da $ \Z_2 \times \Z_2 $ isomorfo a $ \mathcal{S}_3 $, quindi
-\[ \Aut{Q_8} \cong \Z_2 \times \Z_2 \rtimes_\phi \mathcal{S}_3 \] Per una certa azione $ \phi $ che rende il gruppo $ \mathcal{S}_4 $ (per ragioni magiche non dimostrate).
+\[ \boxed{\Aut{Q_8} \cong \Z_2 \times \Z_2 \rtimes_\phi \mathcal{S}_3} \] Per una certa azione $ \phi $ che rende il gruppo $ \mathcal{S}_4 $ (per ragioni magiche non dimostrate).
 
 
 
